--- a/config/nettrine.neon
+++ b/config/nettrine.neon
@@ -1,7 +1,6 @@
 # Extension > Nettrine
 #
 extensions:
-	nettrine.annotations: Nettrine\Annotations\DI\AnnotationsExtension
 	nettrine.cache: Nettrine\Cache\DI\CacheExtension
 	nettrine.migrations: Nettrine\Migrations\DI\MigrationsExtension
 	nettrine.fixtures: Nettrine\Fixtures\DI\FixturesExtension
@@ -14,7 +13,7 @@ extensions:
 	nettrine.orm: Nettrine\ORM\DI\OrmExtension
 	nettrine.orm.cache: Nettrine\ORM\DI\OrmCacheExtension
 	nettrine.orm.console: Nettrine\ORM\DI\OrmConsoleExtension(%consoleMode%)
-	nettrine.orm.annotations: Nettrine\ORM\DI\OrmAnnotationsExtension
+	nettrine.orm.attributes: Nettrine\ORM\DI\OrmAttributesExtension
 
 nettrine.dbal:
 	debug:
@@ -35,9 +34,9 @@ nettrine.orm:
 	configuration:
 		autoGenerateProxyClasses: %debugMode%
 
-nettrine.orm.annotations:
-	mapping:
-		App\Domain: %appDir%/Model/Database/Entity
+nettrine.orm.attributes:
+    mapping:
+        App\Model\Database\Entity: %appDir%/Model/Database/Entity
 
 nettrine.migrations:
 	table: doctrine_migrations
